# skypro

./: README.md  pyproject.toml
src/: decorators.py  external_api.py  generators.py  main.py  masks.py  processing.py  reading_files.py  search_processing.py  utils.py  widget.py
tests/: conftest.py  test_decorators.py  test_external_api.py  test_generators.py  test_main.py  test_masks.py  test_processing.py  test_reading_files.py  test_search_processing.py  test_utils.py  test_widget.py
